# newground

./: .gitignore  LICENSE.md  Makefile  README.md  compile_comparison_combination_part.py  compile_cython_satisfiability.py  compile_function_combination_part.py  compile_generate_head_guesses.py  compile_get_facts_cython_file.py  environment.yml  setup.cfg  setup_get_facts_cython.py  start_heuristic_splitter.py  start_nagg.py  test.lp  test_2.lp  test_2_output.lp  test_output.lp
cython_nagg/: compile_cython_satisfiability.py  cython_nagg.py  generate_head_guesses.py  generate_justifiability_old_part_preprocessor.py  generate_satisfiability_part.pyx  generate_satisfiability_part_preprocessor.py  generate_saturation_justifiability_part_preprocessor.py
cython_nagg/cython/: cython_helpers.pxd  cython_helpers.pyx  (+4 more)
heuristic_splitter/: __init__.py  approximate_generated_tuples_transformer.py  domain_inferer.py  domain_transformer.py  function.py  get_facts.py  get_facts_cython.pyx  graph_analyzer.py  graph_creator_transformer.py  graph_data_structure.py  grounding_strategy_generator.py  grounding_strategy_handler.py  heuristic.py  heuristic_0.py  heuristic_splitter.py  heuristic_transformer.py  logging_class.py  nagg_domain_connector.py  nagg_domain_connector_transformer.py  rule.py  variable_graph_structure.py
nagg/: __init__.py  main_transformer.py  nagg.py
regression_tests/: as_equiv_checker.py  regression_test.py
src/: Makefile  compile_all.sh  compile_cython_helpers.py  compile_preprocess_smodels_program_.py  compile_saturation_justification_helper.py  gringo
(+227 files in other folders)
