[metadata]
name = nagg
version = 0.2.0
description = Bypassing the ASP Bottleneck: Hybrid Grounding by Splitting and Rewriting
author =The Authors
email = authors@email.com 
long_description = file: README.md, LICENSE.md

[options]
packages = find:
python_requires = >= 3.11
install_requires = 
    future-fstrings
    clingo>=5.6.2
    clingox
    networkx

[options.extras_require]
doc =
    sphinx==6.2.1
    sphinx_rtd_theme
format =
    nox
    autoflake
    isort
    black
lint_flake8 =
    nox
    flake8 
lint_pylint = 
    nox
    pylint

[options.entry_points]
console_scripts =
    nagg = nagg:main

